--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.4.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
